# unixcli-rs

./: Cargo.toml  README
examples/: cat.rs
src/: err.rs  lib.rs  progname.rs
tests/: crate_as.rs
