[package]
name = "unixcli"
version = "0.1.3"
authors = ["KAMADA Ken'ichi <kamada@nanohz.org>"]

description = "Helper library for writing unix command line utilities in Rust"
documentation = "https://docs.rs/unixcli"
homepage = "https://github.com/kamadak/unixcli-rs"
repository = "https://github.com/kamadak/unixcli-rs"
readme = "README"
keywords = ["cli", "command", "command-line", "unix"]
categories = ["command-line-interface"]
license = "BSD-2-Clause"
